@@ -19,7 +19,7 @@
  * You should have received a copy of the GNU General Public License along with
  * MLPACK.  If not, see <http://www.gnu.org/licenses/>.
  */
- 
+
 #ifndef __MLPACK_CORE_TREE_COSINE_TREE_COSINE_TREE_HPP
 #define __MLPACK_CORE_TREE_COSINE_TREE_COSINE_TREE_HPP
 
@@ -40,7 +40,7 @@ typedef boost::heap::priority_queue<CosineTree*,
 class CosineTree
 {
  public:
-      
+
   /**
    * CosineTree constructor for the root node of the tree. It initializes the
    * necessary variables required for splitting of the node, and building the
@@ -50,7 +50,7 @@ class CosineTree
    * @param dataset Matrix for which cosine tree is constructed.
    */
   CosineTree(const arma::mat& dataset);
-  
+
   /**
    * CosineTree constructor for nodes other than the root node of the tree. It
    * takes in a pointer to the parent node and a list of column indices which
@@ -61,7 +61,7 @@ class CosineTree
    * @param subIndices Pointer to vector of column indices to be included.
    */
   CosineTree(CosineTree& parentNode, const std::vector<size_t>& subIndices);
- 
+
   /**
    * Construct the CosineTree and the basis for the given matrix, and passed
    * 'epsilon' and 'delta' parameters. The CosineTree is constructed by
@@ -79,7 +79,13 @@ class CosineTree
   CosineTree(const arma::mat& dataset,
              const double epsilon,
              const double delta);
-  
+
+  /**
+   * Destroy the cosine tree and all of its children (take care of the memory
+   * allocations too).
+   */
+  ~CosineTree();
+
   /**
    * Calculates the orthonormalization of the passed centroid, with respect to
    * the current vector subspace.
@@ -88,12 +94,12 @@ class CosineTree
    * @param centroid Centroid of the node being added to the basis.
    * @param newBasisVector Orthonormalized centroid of the node.
    * @param addBasisVector Address to additional basis vector.
-   */                           
+   */
   void ModifiedGramSchmidt(CosineNodeQueue& treeQueue,
                            arma::vec& centroid,
                            arma::vec& newBasisVector,
                            arma::vec* addBasisVector = NULL);
-  
+
   /**
    * Estimates the squared error of the projection of the input node's matrix
    * onto the current vector subspace. A normal distribution is fit using
@@ -105,35 +111,35 @@ class CosineTree
    * @param treeQueue Priority queue of cosine nodes.
    * @param addBasisVector1 Address to first additional basis vector.
    * @param addBasisVector2 Address to second additional basis vector.
-   */                         
+   */
   double MonteCarloError(CosineTree* node,
                          CosineNodeQueue& treeQueue,
                          arma::vec* addBasisVector1 = NULL,
                          arma::vec* addBasisVector2 = NULL);
-  
+
   /**
    * Constructs the final basis matrix, after the cosine tree construction.
    *
    * @param treeQueue Priority queue of cosine nodes.
-   */                       
+   */
   void ConstructBasis(CosineNodeQueue& treeQueue);
-                         
+
   /**
    * This function splits the cosine node into two children based on the cosines
    * of the columns contained in the node, with respect to the sampled splitting
    * point. The function also calls the CosineTree constructor for the children.
    */
   void CosineNodeSplit();
-                         
+
   /**
    * Sample 'numSamples' points from the Length-Squared distribution of the
    * cosine node. The function uses 'l2NormsSquared' to calculate the cumulative
    * probability distribution of the column vectors. The sampling is based on a
    * randomly generated values in the range [0, 1].
    */
-  void ColumnSamplesLS(std::vector<size_t>& sampledIndices, 
+  void ColumnSamplesLS(std::vector<size_t>& sampledIndices,
                        arma::vec& probabilities, size_t numSamples);
-  
+
   /**
    * Sample a point from the Length-Squared distribution of the cosine node. The
    * function uses 'l2NormsSquared' to calculate the cumulative probability
@@ -141,7 +147,7 @@ class CosineTree
    * generated value in the range [0, 1].
    */
   size_t ColumnSampleLS();
-  
+
   /**
    * Sample a column based on the cumulative Length-Squared distribution of the
    * cosine node, and a randomly generated value in the range [0, 1]. Binary
@@ -156,7 +162,7 @@ class CosineTree
    */
   size_t BinarySearch(arma::vec& cDistribution, double value, size_t start,
                       size_t end);
-  
+
   /**
    * Calculate cosines of the columns present in the node, with respect to the
    * sampled splitting point. The calculated cosine values are useful for
@@ -165,52 +171,52 @@ class CosineTree
    * @param cosines Vector to store the cosine values in.
    */
   void CalculateCosines(arma::vec& cosines);
-  
+
   /**
    * Calculate centroid of the columns present in the node. The calculated
    * centroid is used as a basis vector for the cosine tree being constructed.
    */
   void CalculateCentroid();
-  
+
   //! Returns the basis of the constructed subspace.
   void GetFinalBasis(arma::mat& finalBasis) { finalBasis = basis; }
-  
+
   //! Get pointer to the dataset matrix.
   const arma::mat& GetDataset() const { return dataset; }
-  
+
   //! Get the indices of columns in the node.
   std::vector<size_t>& VectorIndices() { return indices; }
-  
+
   //! Set the Monte Carlo error.
   void L2Error(const double error) { this->l2Error = error; }
-  
+
   //! Get the Monte Carlo error.
   double L2Error() const { return l2Error; }
-  
+
   //! Get pointer to the centroid vector.
   arma::vec& Centroid() { return centroid; }
-  
+
   //! Set the basis vector of the node.
   void BasisVector(arma::vec& bVector) { this->basisVector = bVector; }
-  
+
   //! Get the basis vector of the node.
   arma::vec& BasisVector() { return basisVector; }
-  
+
   //! Get pointer to the left child of the node.
   CosineTree* Left() { return left; }
-  
+
   //! Get pointer to the right child of the node.
   CosineTree* Right() { return right; }
-  
+
   //! Get number of columns of input matrix in the node.
   size_t NumColumns() const { return numColumns; }
-  
+
   //! Get the Frobenius norm squared of columns in the node.
   double FrobNormSquared() const { return frobNormSquared; }
-  
+
   //! Get the column index of split point of the node.
   size_t SplitPointIndex() const { return indices[splitPointIndex]; }
-  
+
  private:
   //! Matrix for which cosine tree is constructed.
   const arma::mat& dataset;
@@ -222,10 +228,10 @@ class CosineTree
   arma::mat basis;
   //! Parent of the node.
   CosineTree* parent;
-  //! Right child of the node.
-  CosineTree* right;
   //! Left child of the node.
   CosineTree* left;
+  //! Right child of the node.
+  CosineTree* right;
   //! Indices of columns of input matrix in the node.
   std::vector<size_t> indices;
   //! L2-norm squared of columns in the node.
@@ -247,7 +253,7 @@ class CosineTree
 class CompareCosineNode
 {
  public:
- 
+
   // Comparison function for construction of priority queue.
   bool operator() (const CosineTree* a, const CosineTree* b) const
   {
